--- a/runs/patients/runs/run8/tex/run8.tex
+++ b/runs/patients/runs/run8/tex/run8.tex
@@ -132,7 +132,8 @@ final cell-counts in each sample was (4556, 1308).
   \item We fit 4 models, each with a different value for $\phi$. The values
         for $\phi$ were (0, 1, 10, 100).
   % \item The computation time averaged across the 4 models was 159 hours.
-  \item The computation time averaged across the 4 models was 65 hours.
+  % \item The computation time averaged across the 4 models was 65 hours.
+  \item The computation time averaged across the 4 models was 35 hours.
   \item 5\% of data in each sample are used to sample from trained prior, and
     $M=5$ was used.
   \item \textbf{Some Priors:}
