add page numbers

--- a/runs/patients/runs/run8/tex/run8.tex
+++ b/runs/patients/runs/run8/tex/run8.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath} % for math
 \usepackage{amssymb} % like \Rightarrow
 \setlength\parindent{0pt} % Suppresses the indentation of new paragraphs.
-\pagenumbering{gobble} % suppress page numbers
+% \pagenumbering{gobble} % suppress page numbers
 
 % Big display
 \newcommand{\ds}{ \displaystyle }
