--- a/runs/patients/runs/run10/tex/run10.tex
+++ b/runs/patients/runs/run10/tex/run10.tex
@@ -61,7 +61,7 @@
 \def\imscale{.5}
 
 % Title Settings
-\title{Patients Data Analysis with r-FAM and $K=20$}
+\title{Patients Data Analysis with r-FAM and $K=25$}
 \author{Arthur Lui}
 \date{\today} % \date{} to set date to empty
 
@@ -134,13 +134,14 @@ final cell-counts in each sample was (4556, 1308).
         for $\phi$ were (0, 1, 10, 100).
   % \item The computation time averaged across the 4 models was 159 hours.
   % \item The computation time averaged across the 4 models was 65 hours.
-  \item The computation time averaged across the 4 models was 35 hours.
+  % \item The computation time averaged across the 4 models was 35 hours.
+  \item The computation time averaged across the 4 models was 40 hours.
   \item 5\% of data in each sample are used to sample from trained prior, and
     $M=5$ was used.
   \item \textbf{Some Priors:}
   \begin{itemize}
-    \item $w^\star_{i,k} \sim \Gam(\text{shape}=5, \text{rate}=1)$
-    \item $p_c \sim \text{Beta}(1, 99)$
+    \item $w^\star_{i,k} \sim \Gam(\text{shape}=1, \text{rate}=2)$
+    \item $p_c \sim \text{Beta}(1, 9)$
     \item $L_0=6$, $L_1=3$
     \item $\alpha \sim \Gam(1, 1)$
     \item $\delta_0 \sim \TN^-(1, 0.1)$
