--- a/runs/sim-study/notes/test-sim-6-8-4/test-sim-6-8-4.tex
+++ b/runs/sim-study/notes/test-sim-6-8-4/test-sim-6-8-4.tex
@@ -105,9 +105,9 @@ this study. Note the following:
 \begin{figure}[H]
   \begin{center}  % 6 x 5
     \begin{tabular}{ccc}
-      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0.0-zind1/img/Z_true.pdf} &
-      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0.0-zind2/img/Z_true.pdf} &
-      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0.0-zind3/img/Z_true.pdf} \\
+      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0-zind1/img/Z_true.pdf} &
+      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0-zind2/img/Z_true.pdf} &
+      \includegraphics[scale=0.4]{\imgdir/pmiss0.0-phi0-zind3/img/Z_true.pdf} \\
       %
       (a) $Z^{1,\true}$ &
       (b) $Z^{2,\true}$ &
@@ -142,24 +142,27 @@ this study. Note the following:
 \begin{itemize}
   \item We generated $y_{inj}$ from skew Normal distributions. Specifically,
   \begin{itemize}
-    \item Location parameter: $(\mu_{0,i,j}^\star)^\true=-0.8 + \epsilon_{0,i,j}$, $\epsilon_{0,i,j} \sim \Uniform(-0.3, 0.3)$
-    \item Location parameter: $(\mu_{1,i,j}^\star)^\true=1.3 + \epsilon_{1,i,j}$, $\epsilon_{1,i,j} \sim \Uniform(-0.3, 0.3)$
-    \item Scale parameter: ($\sigma^2_i)^\true=0.5$, $N=(2000, 2000)$
+    % \item Location parameter: $(\mu_{0,i,j}^\star)^\true=-0.8 +
+    %   \epsilon_{0,i,j}$, $\epsilon_{0,i,j} \sim \Uniform(-0.3, 0.3)$
+    % \item Location parameter: $(\mu_{1,i,j}^\star)^\true=1.3 +
+    %   \epsilon_{1,i,j}$, $\epsilon_{1,i,j} \sim \Uniform(-0.3, 0.3)$
+    \item Location parameter: $(\mu_{0,i,j}^\star)^\true=-0.8 +
+      \epsilon_{0,i,j}$, $\epsilon_{0,i,j} \sim \Uniform(-0.3, 0.3)$
+    \item Location parameter: $(\mu_{1,i,j}^\star)^\true=1 +
+      \epsilon_{1,i,j}$, $\epsilon_{1,i,j} \sim \Uniform(-0.3, 0.3)$
+    \item Scale parameter: ($\sigma^2_i)^\true=0.7$, $N=(2000, 2000)$
     \item The skewness parameter $\zeta$ was set to -0.9. Note that $\zeta$
           corresponds to $\delta \in \p{-1, 1}$ in \cite{fruhwirth2010bayesian}.
   \end{itemize}
-  \item 6000 burn-in, followed by 3000 iterations (no thinning).
+  % \item 6000 burn-in, followed by 3000 iterations (no thinning).
+  \item 3000 burn-in, followed by 1000 iterations (no thinning).
   \item We also did weight-preserving parallel tempering (WPPT) with temperatures 
         $\bc{1, 1.003, 1.006, 1.01}$. Swaps between every pair of chains were
         proposed at each MCMC iteration.
-  \item Computation time for each chain was was approximately 25 hours, but this can
-        be reduced to 12.5 hours with an improved (more tedious) implementation.
-        Particularly, currently if only one WPPT run is done at a time (as opposed
-        to 6 WPPT runs at a time), the computation time would be 12.5 hours, which
-        is approximately the time it takes to do a single non-WPPT run.
+  \item Computation time for each chain was was approximately 4 hours.
   \item 5\% of data in each sample are used to sample from trained prior, and
     $M=5$ was used.
-  \item We did each analysis with $\phi \in \bc{0, 1, 100, 10000}$
+  \item We did each analysis with $\phi \in \bc{0, 1, 25, 100}$
   \item The simulation study was done for each of the true $Z$'s in 
         Figure~\ref{fig:Z-true}.
   \item For each true $Z$, we generated a full data set with no missing values,
@@ -448,19 +451,19 @@ this study. Note the following:
     \begin{tabular}{ccc}
       \hline \\
       & $Z_1$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind1/img/missmech_1.pdf} &
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind1/img/missmech_1.pdf} &
       &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind1/img/missmech_2.pdf} \\
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind1/img/missmech_2.pdf} \\
       \hline \\
       & $Z_2$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind2/img/missmech_1.pdf} &
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind2/img/missmech_1.pdf} &
       &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind2/img/missmech_2.pdf} \\
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind2/img/missmech_2.pdf} \\
       \hline \\
       & $Z_3$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind3/img/missmech_1.pdf} &
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind3/img/missmech_1.pdf} &
       &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0.0-zind3/img/missmech_2.pdf} \\
+      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind3/img/missmech_2.pdf} \\
       \hline
     \end{tabular}
   \end{center}
