add plots of z col diff

--- a/runs/patients/runs/run11/tex/run11.tex
+++ b/runs/patients/runs/run11/tex/run11.tex
@@ -318,7 +318,19 @@ final cell-counts in each sample was (4556, 1308).
   mode more easily. For $\phi > 0$, $R_i$ seems to decrease as $\phi$ increases.}
   \label{fig:W-post}
 \end{figure}
- 
+
+\newpage
+\section{Pairwise Distances of $\hat Z_i$ Columns}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{Z_dist.pdf}{.4}
+  \end{center}
+  \caption{Distribution of pairwise distances of selected $\hat Z_i$ columns.
+  The red lines are the mean pairwise distances of the selected columns.
+  Note that pairwise distances increase as $\phi$ increases.}
+  \label{fig:W-post}
+\end{figure}
+  
 \newpage
 \section{Box plots for $W$}
 \begin{figure}[H]
