added new figures

--- a/runs/patients/runs/run11/tex/run11.tex
+++ b/runs/patients/runs/run11/tex/run11.tex
@@ -250,6 +250,29 @@ final cell-counts in each sample was (4556, 1308).
   \label{fig:y2est}
 \end{figure}
 
+\newpage
+\section{Centroids of $y_1$ Posterior Estimates}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{y1_centroid.pdf}{\imscale}
+  \end{center}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:y1est}
+\end{figure}
+
+\newpage
+\section{Centroids of of $y_2$ Posterior Estimates}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{y2_centroid.pdf}{\imscale}
+  \end{center}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:y2est}
+\end{figure}
+
+
 % \newpage
 % \section{Posterior estimate of $y_3$}
 % \begin{figure}[H]
