better plots in report

--- a/runs/sim-study/configs/test-sim-6-8-5/tex/test-sim-6-8-5.tex
+++ b/runs/sim-study/configs/test-sim-6-8-5/tex/test-sim-6-8-5.tex
@@ -272,28 +272,6 @@ this study. Note the following:
 \end{figure}
 
 \newpage
-\section{Posterior estimate of $y_1$}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{y1.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:y1est}
-\end{figure}
-
-\newpage
-\section{Posterior estimate of $y_2$}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{y2.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:y2est}
-\end{figure}
-
-\newpage
 \section{Box plots for $p_i$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
@@ -305,16 +283,73 @@ this study. Note the following:
   \label{fig:ppost}
 \end{figure}
 
-\newpage
-\section{Trace plots for $p_1$}
+\section{Centroids of Posterior estimate of $y_1$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
-    \imgtemplate{p1_trace.pdf}{\imscale}
+    \imgtemplate{y1_centroid.pdf}{\imscale}
   \end{center}
   % TODO: Write more?
   \caption{}
-  \label{fig:p1trace}
+  \label{fig:y1est}
 \end{figure}
+
+\newpage
+\section{Centroids of Posterior estimate of $y_2$}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \imgtemplate{y2_centroid.pdf}{\imscale}
+  \end{center}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:y2est}
+\end{figure}
+
+% NOTE: sanitycheck
+% \newpage
+% \section{Posterior estimate of $y_1$}
+% \begin{figure}[H]
+%   \begin{center}  % 6 x 5
+%     \imgtemplate{y1.pdf}{\imscale}
+%   \end{center}
+%   % TODO: Write more?
+%   \caption{}
+%   \label{fig:y1est}
+% \end{figure}
+% 
+% \newpage
+% \section{Posterior estimate of $y_2$}
+% \begin{figure}[H]
+%   \begin{center}  % 6 x 5
+%     \imgtemplate{y2.pdf}{\imscale}
+%   \end{center}
+%   % TODO: Write more?
+%   \caption{}
+%   \label{fig:y2est}
+% \end{figure}
+
+% NOTE: sanitycheck
+% \newpage
+% \section{Box plots for $p_i$}
+% \begin{figure}[H]
+%   \begin{center}  % 6 x 5
+%     \imgtemplate{p.pdf}{\imscale}
+%   \end{center}
+%   % TODO: Write more?
+%   \caption{The posterior mean of $p_i$ is usually between 0.2 and 0.4, and
+%   sometimes between 0.4 and 0.5. The spread is large.}
+%   \label{fig:ppost}
+% \end{figure}
+% 
+% \newpage
+% \section{Trace plots for $p_1$}
+% \begin{figure}[H]
+%   \begin{center}  % 6 x 5
+%     \imgtemplate{p1_trace.pdf}{\imscale}
+%   \end{center}
+%   % TODO: Write more?
+%   \caption{}
+%   \label{fig:p1trace}
+% \end{figure}
 
 \newpage
 \section{Trace plots for $p_2$}
