--- a/runs/sim-study/configs/test-sim-6-8-5/tex/test-sim-6-8-5.tex
+++ b/runs/sim-study/configs/test-sim-6-8-5/tex/test-sim-6-8-5.tex
@@ -183,69 +183,7 @@ this study. Note the following:
   \end{itemize}
 \end{itemize}
 
-\newpage
-\section{Log likelihood (post-burn)}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{loglike_postburn.pdf}{\imscale}
-  \end{center}
-  \caption{Log-likelihood for 3000 iterations after burn-in of 6000 for each
-  simulation setup. The first three columns are the runs with no missing
-  data. The last three columns are the runs with missing data. The first and
-  fourth, second and third, and third and fifth columns are run with $Z^1$,
-  $Z^2$, and $Z^3$, respectively. Each row is run with a different $\phi$.
-  This arrangement is used in subsequent figures. The mixing appears decent
-  from these figures. We see that in some cases (b, e), swaps between chains
-  resulted in very different states in the main chain.}
-  \label{fig:ll}
-\end{figure}
 
-\newpage
-\section{Swap proportions}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{swapprops.pdf}{\imscale}
-  \end{center}
-  \caption{These figures summarize proportion of instances that swaps were
-  made when proposed between the various chains for each setup. It seems that
-  swapping is more difficult when $\phi=0$, though I'm uncertain why that
-  might be the case.}
-  \label{fig:swapproprs}
-\end{figure}
-
-
-% \newpage
-% \section{Posterior mean of $Z$}
-% \begin{figure}[H]
-%   \begin{center}  % 6 x 5
-%     \imgtemplate{Zmean.pdf}{\imscale}
-%   \end{center}
-%   % TODO: Write more?
-%   \caption{Posterior means of $Z$ for each run. When $\phi=0$, the number of
-%   recovered features is 0 to 1, for $Z^{1,\true}$. In contrast, number of
-%   recovered features when $\phi > 0$ is between 6 and 7, with the missing
-%   feature being feature 7. This is perhaps due to the added left-skew in the observed
-%   data, making it more feasible for features to be explained by mixture components
-%   with negative means. The $\sigma_2^i$ learned when $\phi=0$ tended to be
-%   much larger as well. Again, mixing may also be better when $\phi>0$ because 
-%   the exploration of different configurations of $Z$ is encourage. There is a
-%   tendency for $Z$ to be extremely sparse when $\phi=0$, due to the IBP prior.
-%   %
-%   For $Z^{2,\true}$, between 2 and 6 features were recovered when $\phi=0$.
-%   When $\phi > 0$, all features were recovered. But in $(n)$, 
-%   eight features were recovered, the extra feature being similar to one of the
-%   features. However, it's estimated abundance was less than 1\%.
-%   %
-%   For Data 3, when $\phi=0$, the only features that were recovered are
-%   features 3, 5, 6, and 7, which are the most representative features. i.e.
-%   Features 1 and 2, which are rare, are merged with feature 3, which is
-%   abundant and similar to the former features. When $\phi>0$, 6 to 7 features were
-%   recovered. The missing features were either feature 1 or 2, which is similar to 
-%   and merged with feature 3. Feature 7, though rare, was recovered, likely because
-%   it is distinct.}
-%   \label{fig:zmean}
-% \end{figure}
- 
 \newpage
 \section{Posterior estimate of $Z_1$}
 \begin{figure}[H]
@@ -271,18 +209,6 @@ this study. Note the following:
   \label{fig:z2est}
 \end{figure}
 
-\newpage
-\section{Box plots for $p_i$}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{p.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{The posterior mean of $p_i$ is usually between 0.2 and 0.4, and
-  sometimes between 0.4 and 0.5. The spread is large.}
-  \label{fig:ppost}
-\end{figure}
-
 \section{Centroids of Posterior estimate of $y_1$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
@@ -305,75 +231,26 @@ this study. Note the following:
 \end{figure}
 
 % NOTE: sanitycheck
-% \newpage
-% \section{Posterior estimate of $y_1$}
-% \begin{figure}[H]
-%   \begin{center}  % 6 x 5
-%     \imgtemplate{y1.pdf}{\imscale}
-%   \end{center}
-%   % TODO: Write more?
-%   \caption{}
-%   \label{fig:y1est}
-% \end{figure}
-% 
-% \newpage
-% \section{Posterior estimate of $y_2$}
-% \begin{figure}[H]
-%   \begin{center}  % 6 x 5
-%     \imgtemplate{y2.pdf}{\imscale}
-%   \end{center}
-%   % TODO: Write more?
-%   \caption{}
-%   \label{fig:y2est}
-% \end{figure}
-
-% NOTE: sanitycheck
-% \newpage
-% \section{Box plots for $p_i$}
-% \begin{figure}[H]
-%   \begin{center}  % 6 x 5
-%     \imgtemplate{p.pdf}{\imscale}
-%   \end{center}
-%   % TODO: Write more?
-%   \caption{The posterior mean of $p_i$ is usually between 0.2 and 0.4, and
-%   sometimes between 0.4 and 0.5. The spread is large.}
-%   \label{fig:ppost}
-% \end{figure}
-% 
-% \newpage
-% \section{Trace plots for $p_1$}
-% \begin{figure}[H]
-%   \begin{center}  % 6 x 5
-%     \imgtemplate{p1_trace.pdf}{\imscale}
-%   \end{center}
-%   % TODO: Write more?
-%   \caption{}
-%   \label{fig:p1trace}
-% \end{figure}
-
 \newpage
-\section{Trace plots for $p_2$}
+\section{Posterior estimate of $y_1$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
-    \imgtemplate{p2_trace.pdf}{\imscale}
+    \imgtemplate{y1.pdf}{\imscale}
   \end{center}
   % TODO: Write more?
   \caption{}
-  \label{fig:p2trace}
+  \label{fig:y1est}
 \end{figure}
-
-\newpage
-\section{Trace plots for $\mu^\star$}
+ 
+% \newpage
+\section{Posterior estimate of $y_2$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
-    \imgtemplate{mus_trace.pdf}{\imscale}
+    \imgtemplate{y2.pdf}{\imscale}
   \end{center}
-  \caption{Trace plots for $\mu^\star_z$. The trends are very similar within
-  columns (i.e. for the same data, but different $\phi$). In (e), there is a
-  jump in $\mu^\star_0$ which results from a swap proposed between the main
-  chain and the next chain. In this run, helper chains usually did not swap
-  with the main chain.}
-  \label{fig:mus-trace}
+  % TODO: Write more?
+  \caption{}
+  \label{fig:y2est}
 \end{figure}
 
 \newpage
@@ -388,21 +265,6 @@ this study. Note the following:
 
 
 \newpage
-\section{Trace plots for $\sigma^2$}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{sig2_trace.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{Trace plots for $\sigma^2$. The trends are very similar within
-  columns (i.e. for the same data, but different $\phi$) when $\phi>0$.
-  Again, In (e), there is a jump in $\sigma^2$ which results from a swap
-  proposed between the main chain and the next chain. In this run, helper
-  chains usually did not swap with the main chain.}
-  \label{fig:sig2-trace}
-\end{figure}
-
-\newpage
 \section{Posterior distributions for $\sigma^2$}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
@@ -413,99 +275,10 @@ this study. Note the following:
   \label{fig:sig2}
 \end{figure}
 
-\newpage
-\section{Posterior distributions for sample 1 marker 1}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i1_j1.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{Data fit is rather good.}
-  \label{fig:ddi1j1}
-\end{figure}
-
-\newpage
-\section{Posterior distributions for sample 1 marker 2}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i1_j2.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:ddi1j2}
-\end{figure}
-
-\newpage
-\section{Posterior distributions for sample 2 marker 1}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i2_j1.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:ddi2j1}
-\end{figure}
-
-\newpage
-\section{Posterior distributions for sample 2 marker 2}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i2_j2.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:ddi2j2}
-\end{figure}
-
-\newpage
-\section{Posterior distributions for sample 2 marker 6}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i1_j6.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:ddi1j6}
-\end{figure}
-
-\newpage
-\section{Posterior distributions for sample 2 marker 6}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \imgtemplate{dden/dden_i2_j6.pdf}{\imscale}
-  \end{center}
-  % TODO: Write more?
-  \caption{}
-  \label{fig:ddi2j6}
-\end{figure}
-
-\newpage
-\section{Missing Mechanism}
-\begin{figure}[H]
-  \begin{center}  % 6 x 5
-    \begin{tabular}{ccc}
-      \hline \\
-      & $Z_1$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind1/img/missmech_1.pdf} &
-      &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind1/img/missmech_2.pdf} \\
-      \hline \\
-      & $Z_2$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind2/img/missmech_1.pdf} &
-      &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind2/img/missmech_2.pdf} \\
-      \hline \\
-      & $Z_3$ & \\
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind3/img/missmech_1.pdf} &
-      &
-      \includegraphics[scale=0.45]{\imgdir/pmiss0.0-phi0-zind3/img/missmech_2.pdf} \\
-      \hline
-    \end{tabular}
-  \end{center}
-\label{fig:missmech}
-\end{figure}
+% \input{extra}
 
 % Uncomment if using bibliography:
 \bibliography{sim}
 
 \end{document}
+
