updated cluster viz report (run11)

--- a/runs/patients/runs/cluster-viz/report/cluster-viz.tex
+++ b/runs/patients/runs/cluster-viz/report/cluster-viz.tex
@@ -62,63 +62,55 @@
 
 \begin{figure}[H]
   \centering
-  \begin{tabular}{ccc}
+  \begin{tabular}{cc}
     (a) FlowSOM sample 1 &
-    (b) FlowSOM sample 2 &
-    (c) FlowSOM sample 3 \\
-    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-1.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-2.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/flowsom-tsne-combined-3.pdf} \\
+    (b) FlowSOM sample 2 \\
+    \includegraphics[scale=0.3]{\imgdir/flowsom-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.3]{\imgdir/flowsom-tsne-combined-2.pdf} \\
     (d) Mclust sample 1 &
-    (e) Mclust sample 2 &
-    (f) Mclust sample 3 \\
-    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-1.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-2.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/mclust-tsne-combined-3.pdf} \\
+    (e) Mclust sample 2 \\
+    \includegraphics[scale=0.3]{\imgdir/mclust-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.3]{\imgdir/mclust-tsne-combined-2.pdf} \\
     (g) FAM $\phi=0$ sample 1 &
-    (h) FAM $\phi=0$ sample 2 &
-    (i) FAM $\phi=0$ sample 3 \\
-    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-1.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-2.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/fam-phi0-tsne-combined-3.pdf} \\
-    (j) FAM $\phi=1$ sample 1 &
-    (k) FAM $\phi=1$ sample 2 &
-    (l) FAM $\phi=1$ sample 3 \\
-    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-1.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-2.pdf} &
-    \includegraphics[scale=0.25]{\imgdir/fam-phi1-tsne-combined-3.pdf} \\
+    (h) FAM $\phi=0$ sample 2 \\
+    \includegraphics[scale=0.3]{\imgdir/fam-phi0-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.3]{\imgdir/fam-phi0-tsne-combined-2.pdf} \\
+    (j) FAM $\phi=100$ sample 1 &
+    (k) FAM $\phi=100$ sample 2 \\
+    \includegraphics[scale=0.3]{\imgdir/fam-phi100-tsne-combined-1.pdf} &
+    \includegraphics[scale=0.3]{\imgdir/fam-phi100-tsne-combined-2.pdf} \\
   \end{tabular}
-  \caption{Clusterings from Mclust (VII) and FlowSOM on three patient samples,
-  visualized using TSNE. Both the clustering and TSNE were performed jointly on
-  the three samples. For both Mclust and FlowSOM, the optimal number of
-  clusters learned was 7. The maximum number of clusters was set to 20 for
-  both clustering algorithms.}
+  \caption{Clusterings from Mclust (VII) and FlowSOM on two patient samples,
+  visualized using TSNE. Both the clustering and TSNE were performed jointly
+  on the two samples. For FlowSOM and Mclust, the optimal number of clusters
+  learned were 10 and 7, respectively. The maximum number of clusters was set
+  to 20 for both clustering algorithms.}
 \end{figure}
 
 
-\section{Mclust and FlowSOM on Patients Data Visualized via Heatmaps}
-
-\begin{figure}[H]
-  \centering
-  \begin{tabular}{ccc}
-    (a) FlowSOM sample 1 &
-    (b) FlowSOM sample 2 &
-    (c) FlowSOM sample 3 \\
-    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-1.pdf} &
-    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-2.pdf} &
-    \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-3.pdf} \\
-    (d) Mclust sample 1 &
-    (e) Mclust sample 2 &
-    (f) Mclust sample 3 \\
-    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-1.pdf} &
-    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-2.pdf} &
-    \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-3.pdf} \\
-  \end{tabular}
-  \caption{Clusterings from Mclust (VII) and FlowSOM on three patient samples,
-  visualized using heatmaps. Both the clustering and TSNE were performed jointly on
-  the three samples. For both Mclust and FlowSOM, the optimal number of
-  clusters learned was 7. The maximum number of clusters was set to 20 for
-  both clustering algorithms.}
-\end{figure}
+% \section{Mclust and FlowSOM on Patients Data Visualized via Heatmaps}
+% 
+% \begin{figure}[H]
+%   \centering
+%   \begin{tabular}{ccc}
+%     (a) FlowSOM sample 1 &
+%     (b) FlowSOM sample 2 &
+%     (c) FlowSOM sample 3 \\
+%     \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-1.pdf} &
+%     \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-2.pdf} &
+%     \includegraphics[scale=0.35]{\imgdir/flowsom-heatmap-3.pdf} \\
+%     (d) Mclust sample 1 &
+%     (e) Mclust sample 2 &
+%     (f) Mclust sample 3 \\
+%     \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-1.pdf} &
+%     \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-2.pdf} &
+%     \includegraphics[scale=0.35]{\imgdir/mclust-heatmap-3.pdf} \\
+%   \end{tabular}
+%   \caption{Clusterings from Mclust (VII) and FlowSOM on three patient samples,
+%   visualized using heatmaps. Both the clustering and TSNE were performed jointly on
+%   the three samples. For both Mclust and FlowSOM, the optimal number of
+%   clusters learned was 7. The maximum number of clusters was set to 20 for
+%   both clustering algorithms.}
+% \end{figure}
 
 \end{document}
