--- a/runs/patients/runs/run11/tex/run11.tex
+++ b/runs/patients/runs/run11/tex/run11.tex
@@ -200,7 +200,7 @@ excluded. The final cell-counts in each sample was (4556, 1308).
     \imgtemplate{y1_centroid.pdf}{\imscale}
   \end{center}
   \caption{Mean expression level for cell type and marker in Sample 1.
-  For example, subpopulaion 1 (row 1), marker 1 has a pinkish color, indicating that the 
+  For example, subpopulation 1 (row 1), marker 1 has a pinkish color, indicating that the 
   average expression level is between 0 and 1 for subpopulation 1, marker 1.
   Red cells indicate positive (higher) expression levels; blue cells indicate lower
   (negative) expression levels.}
@@ -214,7 +214,7 @@ excluded. The final cell-counts in each sample was (4556, 1308).
     \imgtemplate{y2_centroid.pdf}{\imscale}
   \end{center}
   \caption{Mean expression level for cell type and marker in Sample 2. For
-  example, subpopulaion 12 (row 2), marker 1 has a bluish color, indicating
+  example, subpopulation 12 (row 2), marker 1 has a bluish color, indicating
   that the average expression level is between -1 and 0 for subpopulation 12,
   marker 1. Red cells indicate positive (higher) expression levels; blue
   cells indicate lower (negative) expression levels. The subpopulation labels
